--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: hedera
 Type: Package
-Title: What the Package Does (Title Case)
+Title: R package for interfacing with Hedera mirror nodes via REST API.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Marcus A. Howard
+Maintainer: Marcus A. Howard <alexivanhoward@gmail.com>
+Description: R functions for querying Hedera mirror nodes via REST API.
+License: Apache-2.0
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.1
